--- a/src/styles/editform.css
+++ b/src/styles/editform.css
@@ -25,6 +25,7 @@
   font-size: 2rem;
   margin-bottom: 2rem;
   color: #222;
+  font-family: cursiveee;
 }
 
 .form-group {
