--- a/src/styles/registration.css
+++ b/src/styles/registration.css
@@ -13,14 +13,7 @@
 
 .registration{
     background-image: 
-     /* linear-gradient(to left, #9CA8A0, rgba(255 255 255 / 7%)), */
     linear-gradient(to left, #f4eee8 30%, rgba(255, 255, 255, 0.07) 100%),
-
-
-    /* linear-gradient(to left, #9CA8A0, rgba(255 255 255 / 10%)), */
-    /* linear-gradient(to right, rgba(255, 255, 255, 0.1) 0%, #9CA8A0 50%), */
-
-
     url('../../public/image/bg2.png');
 
     background-position: center;
@@ -29,30 +22,25 @@
     width: 100%;
 
 }
-/* .row {
-  height: 100%;
-}
-.container{
-    height: 100%;
-}
-.col-md-6 {
-  height: 100%;
-} */
+
 
 .reg-h1{
     padding-top: 80px;
 }
+
 .input-design {
      width: 100%;
-    background-color: transparent;
+    background-color: #f4eee8ad;
     border: solid 1px black;
     border-radius: 5px;
     padding: 1%;
 }
+
 input[type='file'] {
     border: 1px solid black !important;
     background-color: transparent !important;
 }
+
 .registration button{
      width: 100%;
     background-color: black;
@@ -61,6 +49,7 @@ input[type='file'] {
     padding: 1%;
     border-radius: 5px;
 }
+
 .registration hr{
     height: 2px;
     width: 50%;
@@ -74,19 +63,17 @@ input[type='file'] {
     font-family: cursive; 
     font-size: 1rem;
 }
+
 .registration p {
     margin-bottom: 10px;
 }
+
 .error {
     color: red;
     font-size: 0.9rem;
     margin-left: 10px;
-    font-family: 'Courier New', Courier, monospace;
-    
+    font-family: 'Courier New', Courier, monospace;  
 }
-
-
-
 
 
 /* Responsive styles */
