--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,5 @@
 
 
-
-
 @font-face {
     font-family: cursive-head;
     src: url('../../public/fonts/Edu_NSW_ACT_Cursive/static/EduNSWACTCursive-Medium.ttf');
@@ -15,247 +13,6 @@
     font-family: menu-font;
     src: url('../../public/fonts/Poppins/Poppins-Medium.ttf');
 }
-
-/* .header{
-  z-index: 1001; */
-  /* position: fixed;         Keep it at top */
-  /* top: 0;                   */
-  /* left: 0; */
-  /* width: 100%; */
-  /* background: rgba(255, 255, 255, 0.2);
-}
-.header h1{
-    font-family: cursive-head;
-} */
-
-/* .header-components a{
-    text-decoration: none;
-    color: black; */
-    /* font-family: p-font; */
-/* } */
-
-
-/* slide 1  */
-/* .design-background-1 {
-  
-  background: linear-gradient(135deg, #d1dbbd, #a3c6b4, #91a7b0);
-  margin: 86px;
-  position: relative;
-  
-}
-.design-background-1 img{
-    width: 50%;
-    padding-top: 14%;
-   z-index: 90;
-}
-
-.background-text-1 h4{
-    position: absolute;
-    color: #70591e91;
-    top: 8%;
-    left: 14%;
-    z-index: 3;
-    font-size: 2rem;
-}
-
-.background-text-1 h1{
-    text-shadow: 3px 7px 16px rgba(0, 0, 0, 0.3); */
-    /* text-shadow: 2px 2px 5px rgba(0,0,0,0.3); */
-    /* position: absolute;
-    z-index: 4;
-    top: 11%;
-    left: 13%; */
-    /* font-size: 12rem; */
-    /* color: #5c3a1e; */
-    /* background: linear-gradient(to bottom, #5c3a1e, rgb(123, 91, 91));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-} */
-
-/* .background-text-1 p{
-    font-family: p-font ;
-    position: absolute;
-    top: 60%;
-    right: 9%;
-    left: 10%;
-    text-align: center;
-    color: #212529a8;
-} */
-
-/* slide 2 */
-/* .design-background-2 {
- background: linear-gradient(to bottom right, #fbe8b4, #f5a36c, #c98865);
-  margin: 30px;
-  position: relative;
-}
-.design-background-2 img{
-    width: 41%;
-    padding-top: 11%;
-   z-index: 90;
-}
-
-.background-text-2 h4{
-    position: absolute;
-    color: #5542158a;
-    top: 8%;
-    left: 7%;
-    z-index: 3;
-    font-size: 2rem;
-}
-
-.background-text-2 h1{
-    text-shadow: 3px 7px 16px rgba(0, 0, 0, 0.3);
-    position: absolute;
-    z-index: 4;
-    top: 11%;
-    left: 7%;
-    font-size: 12rem; */
-    /* color: #5c3a1e; */
-    /* background: linear-gradient(to bottom, #880a08, rgb(247 111 37));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-.background-text-2 p{
-    font-family: p-font ;
-    position: absolute;
-    top: 57%;
-    right: 17%;
-    left: 20%;
-    text-align: center;
-    color: #212529a8;
-} */
-
-/* slide 3 */
-/* .design-background-3 {
-  
-  background: linear-gradient(120deg, #f8e9e5, #e4b3c0, #c08497, #915f6d);
-
-  margin: 30px;
-  position: relative;
-}
-.design-background-3 img{
-    width: 50%;
-    padding-top: 11%;
-   z-index: 90;
-} */
-
-/* .background-text-3 h4{
-    position: absolute;
-    color: #9924459c;
-    top: 8%;
-    left: 5%;
-    z-index: 3;
-    font-size: 2rem;
-}
-
-.background-text-3 h1{
-    text-shadow: 3px 7px 16px rgba(0, 0, 0, 0.3);
-    position: absolute;
-    z-index: 4;
-    top: 11%;
-    left:   4%;
-    font-size: 12rem; */
-    /* color: #5c3a1e; */
-    /* background: linear-gradient(to right, #b55772cf, #dc3545);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-} */
-
-/* .background-text-3 p{
-    font-family: p-font ;
-    position: absolute;
-    top: 51%;
-    right: 14%;
-    left: 12%;
-    text-align: center;
-    color: #212529a8;
-} */
-
-
-/* slide 4 */
-
-/* 
-.design-background-4 {
-  
-  background: linear-gradient(to bottom, #0f0f1b, #1a2433, #352841, #5e1e2e);
-
-  margin: 30px;
-  position: relative;
-}
-.design-background-4 img{
-    width: 50%;
-    padding-top: 8%;
-   z-index: 90;
-}
-
-.background-text-4 h4{
-    position: absolute;
-    color: #da6b58;
-    top: 8%;
-    left: 8%;
-    z-index: 3;
-    font-size: 2rem;
-}
-
-.background-text-4 h1{
-    text-shadow: 3px 7px 16px rgba(0, 0, 0, 0.3);
-    position: absolute;
-    z-index: 4;
-    top: 10%;
-    left: 7%;
-    font-size: 11rem; */
-    /* color: #5c3a1e; */
-    /* background: linear-gradient(to right, #ff2600, #ff5e3a);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-} */
-/* 
-.background-text-4 p{
-    font-family: p-font ;
-    position: absolute;
-    top: 60%;
-    right: 15%;
-    left: 15%;
-    text-align: center;
-    color: #cdc8bd;
-} */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -384,6 +141,7 @@
 .dropdown-menu.show{
   background-color: #00000024 !important;
 }
+
 .hero-overlay.container{
  max-width: 100%;
 }
